[package]
name = "war-cli"
version = "0.1.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

repository = "https://github.com/whatisaphone/war"
description = "A viewer/editor for Darksiders saves, worlds, and scripts"
license = "AGPL"
readme = "README.md"
categories = ["command-line-utilities", "encoding", "parser-implementations"]
keywords = ["darksiders", "game", "modding"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
failure = "0.1.5"
notify = "4.0.13"
serde_json = "1.0.40"
structopt = "0.3.1"

war = { path = "../war", version = "0.1.0" }

[features]
strict = []
