[package]
name = "war"
version = "0.0.1"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

[dependencies]
byteordered = "0.4.0"
crc32fast = "1.2.0"
failure = "0.1.5"
flate2 = "1.0.11"
indexmap = { version = "1.2.0", features = ["serde-1"] }
replace_with = "0.1.4"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = { version = "1.0.40", features = ["preserve_order"] }

[features]
strict = []
