[package]
name = "war"
version = "0.1.0"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2018"

repository = "https://github.com/whatisaphone/war"
description = "A viewer/editor for Darksiders saves, worlds, and scripts"
license = "AGPL"
readme = "../../README.md"
categories = ["encoding", "parser-implementations"]
keywords = ["darksiders", "game", "modding"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
byteordered = "0.4.0"
crc32fast = "1.2.0"
encoding_rs = "0.8.20"
failure = "0.1.5"
flate2 = "1.0.11"
indexmap = { version = "1.2.0", features = ["serde-1"] }
num_enum = "0.4.1"
replace_with = "0.1.4"
scroll = "0.9.2"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = { version = "1.0.40", features = ["preserve_order"] }

[features]
strict = []
